--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^11.7.3",
-    "@docusaurus/core": "^3.8.0",
-    "@docusaurus/mdx-loader": "^3.8.0",
-    "@docusaurus/plugin-content-blog": "^3.8.0",
-    "@docusaurus/plugin-content-docs": "^3.8.0",
-    "@docusaurus/plugin-content-pages": "^3.8.0",
-    "@docusaurus/preset-classic": "^3.8.0",
-    "@docusaurus/theme-search-algolia": "^3.8.0",
+    "@docusaurus/core": "^3.9.2",
+    "@docusaurus/mdx-loader": "^3.9.2",
+    "@docusaurus/plugin-content-blog": "^3.9.2",
+    "@docusaurus/plugin-content-docs": "^3.9.2",
+    "@docusaurus/plugin-content-pages": "^3.9.2",
+    "@docusaurus/preset-classic": "^3.9.2",
+    "@docusaurus/theme-search-algolia": "^3.9.2",
     "@easyops-cn/docusaurus-search-local": "^0.46.1",
     "@iconify/react": "^5.2.1",
     "@mdx-js/react": "^3.0.0",
@@ -36,7 +36,7 @@
     "docusaurus-theme-openapi-docs": "^4.3.1",
     "lucide-react": "^0.508.0",
     "micromark-extension-mdx-expression": "^3.0.0",
-    "plugin-image-zoom": "github:flexanalytics/plugin-image-zoom",
+    "plugin-image-zoom": "git+https://github.com/flexanalytics/plugin-image-zoom.git",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -44,9 +44,9 @@
     "webpack": "^5.97.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.8.0",
-    "@docusaurus/tsconfig": "^3.8.0",
-    "@docusaurus/types": "^3.8.0",
+    "@docusaurus/module-type-aliases": "^3.9.2",
+    "@docusaurus/tsconfig": "^3.9.2",
+    "@docusaurus/types": "^3.9.2",
     "css-loader": "^7.1.2",
     "sass": "^1.86.3",
     "sass-loader": "^16.0.5",
